# mcp-tank-operator

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  docker-build-check.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
src/mcp_tank_operator/: caller.py  client.py  http.py  stdio.py  tools.py
tests/: test_caller.py  test_chart.py  test_client.py  test_stdio.py  test_tools.py
