[project]
name = "mcp-tank-operator"
version = "0.1.0"
description = "Tank-operator MCP server — in-cluster HTTP MCP server for managing sessions."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.18.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tank_operator"]

[project.scripts]
mcp-tank-operator-stdio = "mcp_tank_operator.stdio:main"
mcp-tank-operator-http = "mcp_tank_operator.http:main"
